# cloud_computing

./: .env  Dockerfile  README.md  Vagrantfile  app.conf  compose_install.sh  docker-compose.yml  docker_install.sh  pyproject.toml  start.sh
.github/workflows/: main.yml
company/: settings.py  urls.py
company/company/: settings.py  urls.py
data/db/: pg_hba.conf
data/db/base/13757/: 1247  1249  1259  16384  16385  16386  16391  16392  16393  16394  16398  16399  16400  16402  16403  16407  16408  16414  16416  16418  16423  16425  16432  16434  16439  16441  16446  16448  16455  16456  16457  16469  16471  16472  16485  16498  16499  16500  16507  16508  (+43 more)
data/db/global/: 1260  pg_control  pg_internal.init
data/db/pg_stat/: db_0.stat  db_13757.stat  global.stat
data/db2/base/13757/: 1247  1249  1259  16385  16386  16394  16395  16401  16403  16404  16449  16456  16531  16536  16538  16539  16544  16550  16553  16554  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  (+5 more)
data/db2/global/: 1260  1262  2671  pg_control  pg_internal.init
data/db2/pg_stat/: db_0.stat  db_13757.stat  global.stat
employee/: models.py  serializer.py  urls.py  views.py
employee/migrations/: 0001_initial.py  0002_counter.py
